--- a/_config.yml
+++ b/_config.yml
@@ -20,5 +20,7 @@ author:
 
 paginate:         5
 
+disqus_shortname: chrisbanes
+
 github:
   repo:           https://github.com/chrisbanes/chrisbanes.github.io
