fixed favicon icon

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Anirudh Ramanan
-description:      'I work as a Software Developer at Flipkart. This is my personal blog and any views expressed here are solely mine. And yea, Proud to be Udacity Nanodegree Graduate'
+description:      'I work as a Software Developer at Flipkart. This is my personal blog and any views expressed here are solely mine. And yea, Proud to be a Udacity Nanodegree Graduate'
 url:              http://iamanirudh.com
 baseurl:          /
 logo:             /content/images/me.jpg
