--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Anirudh Ramanan
-description:      'I work as a Software Developer at Flipkart. This is my personal blog and any views expressed here are solely mine. And yea, Proud to be a Udacity Nanodegree Graduate'
+description:      'I work as a Software Developer Engineer at Flipkart. This is my personal blog and any views expressed here are solely mine.'
 url:              http://iamanirudh.com
 baseurl:          /
 logo:             /content/images/me.jpg
@@ -27,7 +27,7 @@ gems:
   - jekyll-sitemap
   - jemoji
 
-twitter: '@i_anirudh23'
+twitter: '@anirudh_ramanan'
 
 kramdown:
   # Enable GitHub Flavored Markdown (fenced code blocks)
